# mcore

./: .gitignore  README.md  pyproject.toml
mcore/: dispatcher.py  enum.py  log.py  net.py  queue.py  serialize.py
mcore/game/: animation.py  camera.py  error.py  esper_ext.py  fps.py  frozen.py  imgui.py  predict.py  sound.py  transition.py
mcore/test/: env.py  local_dynamodb.py  mock_server.py
