[tool.poetry]
name = "mcore"
version = "0.1.2"
description = "Supportive code for logging, testing, network, and arcade game development."
authors = ["Maic Siemering <maic@siemering.tech>"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
]
license = "MIT"
readme = "README.md"
repository="https://github.com/eruvanos/mcore"

[tool.poetry.dependencies]
python = ">=3.7.0,<4.0"
arcade = {version = "^2.4.3", optional = true}
esper = {version = "^1.3", optional = true}
Flask = {version = "^2.2.5", optional = true}
mirakuru = {version = "^2.3.0", optional = true}
requests = {version = "^2.24.0", optional = true}
cryptography = {version = "^3.1.1", optional = true}
arcade-imgui = {version = "^0.1.1", optional = true}

[tool.poetry.extras]
secnet = ["cryptography"]
game = ["arcade", "esper", "arcade_imgui"]
test = ["requests", "flask", "mirakuru"]
all = ["cryptography","arcade", "esper", "requests", "flask", "mirakuru"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
